# dotenv-cli

./: .env  .flake8  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: python-package.yaml
completion/bash/: dotenv
debian/: README.Debian  README.source  changelog  control  copyright  dotenv-cli.cron.d.ex  dotenv-cli.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  python3-dotenv-cli.bash-completion  rules  watch  watch.ex
debian/source/: options
debian/upstream/: metadata
docs/: index.md
dotenv_cli/: __init__.py  __main__.py  cli.py  core.py  version.py
tests/: __init__.py  env.py  test_cli.py  test_core.py  test_version.py
