[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dotenv-cli"
description = "Simple dotenv CLI."
authors = [
    { name="Bastian Venthur", email="mail@venthur.de" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["dotenv", "cli", ".env"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
urls = { Homepage = "https://github.com/venthur/dotenv-cli" }
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flakeheaven",
    "build",
    "twine",
    "mypy"
]

[project.scripts]
dotenv = "dotenv_cli.cli:main"

[tool.setuptools]
packages = ["dotenv_cli"]

[tool.setuptools.dynamic]
version = {attr = "dotenv_cli.__VERSION__"}

[tool.pytest.ini_options]
addopts = [
    "--cov=dotenv_cli",
    "--cov=tests",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered"
]

[tool.flakeheaven]
exclude = ["venv", "build"]

[tool.mypy]
files = ["dotenv_cli", "tests"]
strict = true
