[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dotenv-cli"
authors = [
    { name="Bastian Venthur", email="mail@venthur.de" }
]
description = "Simple dotenv CLI."
keywords = ["dotenv", "cli", ".env"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
dotenv = "dotenv_cli.cli:main"

[project.urls]
'Documentation' = 'https://dotenv-cli.readthedocs.io/'
'Source' = 'https://github.com/venthur/dotenv-cli'
'Changelog' = 'https://github.com/venthur/dotenv-cli/blob/master/CHANGELOG.md'

[project.optional-dependencies]
dev = [
    "build",
    "mkdocs",
    "mkdocs-material",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
]

[tool.setuptools.dynamic]
version = { attr = "dotenv_cli.__VERSION__" }

[tool.setuptools]
packages = ["dotenv_cli"]

[tool.pytest.ini_options]
addopts = [
    "--cov=dotenv_cli",
    "--cov=tests",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered"
]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",        # pyflakes
    "E", "W",   # pycodestyle
    "C90",      # mccabe
    "I",        # isort
    "D",        # pydocstyle
    "UP"        # pyupgrade
]
pydocstyle.convention = "numpy"

[tool.mypy]
files = ["dotenv_cli", "tests"]
strict = true
